# SFMLGamepad

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/SFMLGamepad/: Config.hpp  Gamepad.hpp
src/: Gamepad.cpp  GamepadImpl.cpp  GamepadImpl.hpp
src/Apple/: Controller.hpp  Controller.mm
src/Windows/: XInput.cpp  XInput.hpp
test/: mac.mm  main.cpp
test/cmake/: MacOSXBundleInfo.plist.in
